Bug 592710 - Account manager permanently disables unrecognized extension-added account. r=standard8