mailnews/base/src/nsMsgAccountManager.h
@@ -214,6 +214,9 @@ private:
                                   nsCString& aResult);
 
 
+  // Scan the preferences to find a unique server key
+  void GetUniqueServerKey(nsACString& aResult);
+
   nsresult RemoveFolderFromSmartFolder(nsIMsgFolder *aFolder,
                                        uint32_t flagsChanged);
 
